Add split function for text input and add word counter

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <h1>Please enter a block of text:</h1><br>
-    <form id="formeOne">
-      <textarea name="textInput" rows="8" cols="40"></textarea>
-      <button type="submit" class="btn btn-primary"></button>
+    <form id="formOne">
+      <textarea id="formInput" name="textInput" rows="8" cols="40" form="formOne"></textarea><br>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </body>
 </html>
