Add output list with word count

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       <textarea id="formInput" name="textInput" rows="8" cols="40" form="formOne"></textarea><br>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <ul id="results">
+
+    </ul>
+
+
   </body>
 </html>
